devtools/lit/tests/shtest-output-printing.littest
# Check the various features of the ShTest format.
#
# RUN: not %{lit} -j 1 -v %{inputs}/shtest-output-printing > %t.out
# RUN: filechecker --input-file %t.out %s
#
# END.

# CHECK: -- Testing:

# CHECK: FAIL: shtest-output-printing :: basic.littest
# CHECK-NEXT: ******************** TEST 'shtest-output-printing :: basic.littest' FAILED ********************
# CHECK-NEXT: Script:
# CHECK-NEXT: --
# CHECK:      --
# CHECK-NEXT: Exit Code: 1
#
# CHECK:      Command Output
# CHECK-NEXT: --
# CHECK-NEXT: $ : RUN: at line 1
# CHECK-NEXT: $ true
# CHECK-NEXT: $ : RUN: at line 2
# CHECK-NEXT: $ echo hi
# CHECK-NEXT: # command output:
# CHECK-NEXT: hi
#
# CHECK: $ : RUN: at line 3
# CHECK-NEXT: $ wc missing-file
# CHECK-NEXT: # command output:
# CHECK-NEXT: wc: missing-file:{{.*}}No such file or directory
# CHECK: error: command failed with exit status: 1

